# boom-stt

./: README.md  pyproject.toml
modules/: transcribe_audio_file.py  transcribe_mic_audio.py
