[tool.poetry]
name = "boom-stt"
version = "0.1.0"
description = ""
authors = ["Justin Gerard Ricardo <justinericardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
assemblyai = {extras = ["extras"], version = "^0.20.2"}
pyaudio = "^0.2.14"
websocket-client = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
